--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,24 @@
 appdirs==1.4.4
 asgiref==3.4.1
 certifi==2021.10.8
+chardet==4.0.0
 charset-normalizer==2.0.7
 distlib==0.3.1
 dj-database-url==0.5.0
 Django==3.2.5
+django-filter==2.4.0
 django-heroku==0.3.1
 filelock==3.0.12
 gunicorn==20.1.0
 heroku==0.1.4
-Pillow==8.3.1
+idna==3.3
 psycopg2==2.8.6
+PyJWT==2.1.0
 pytz==2021.1
 requests==2.26.0
+s3transfer==0.4.2
+selenium==3.141.0
+six==1.16.0
 sqlparse==0.4.1
 urllib3==1.26.7
 virtualenv==20.4.2
