--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,8 @@ heroku==0.1.4
 idna==3.3
 psycopg2==2.8.6
 PyJWT==2.1.0
+python-dateutil==2.8.2
+python-decouple==3.5
 pytz==2021.1
 requests==2.26.0
 s3transfer==0.4.2
